hrr
===

## Release 1.0

* horizontal rule function