@@ -1,5 +1,0 @@
-#' hrr provides a function to compose and print beautiful horizontal rules.
-#'
-#' @docType package
-#' @name hrr
-NULL
