@@ -1,0 +1,5 @@
+#' hrr provides a simple function to compose and print beautiful horizontal rules.
+#'
+#' @docType package
+#' @name hrr
+NULL
