@@ -4,3 +4,4 @@ hrr
 ## Release 1.0
 
 * horizontal rule function
+* function to detect the number of terminal window columns
